<resources>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="app_name">Food</string>
    <string name="mf__maps_api_key">0d3p-aFq8ysv7E3lxhDz6KL6TR7jFBuwmednRgg</string>
    <string name="map_app_name">ACTIVITY_ENTRY_NAME</string>
    <string name="cmn_checking_for_updates">Checking for updates</string>
    <string name="cmn_new_update_started">New update found. Download started</string>
    <string name="cmn_new_update">%s - New update found.</string>
    <string name="cmn_new_update_without_app_name">New update found.</string>
    <string name="cmn_no_updates">No new updates found</string>
    <string name="cmn_start_download">Select to start downloading.</string>
    <string name="cmn_failed_to_install_app">Failed to install app</string>
    <string name="loading">Loading...</string>
    <string name="amsc_app_name">MultiShotCamera</string>
    <string name="amsc_title_activity_main">MultiShotCamera</string>
    <string name="amsc_rotate">Rotate the Images</string>
    <string name="amsc_square">Take Square Photos</string>
    <string name="amsc_take_pictures">Take Pictures!</string>
    <string name="amsc_show_dock">"Show Dock "</string>
    <string name="amsc_dock_transparent">Dock Transparency</string>
    <string name="amsc_default_transparency">120</string>
    <string name="amsc_album_name">EvernoteFoodPhoto</string>
    <string name="amsc_exiting_message">Saving Pictures…</string>
    <string name="amsc_camera_error_title">Camera error</string>
    <string name="amsc_cannot_connect_camera">"Can't connect to the camera."</string>
    <string name="amsc_pref_camera_recordlocation_title">Store location</string>
    <string name="amsc_pref_camera_recordlocation_entry_off">Off</string>
    <string name="amsc_pref_camera_recordlocation_entry_on">On</string>
    <string name="amsc_pref_camera_picturesize_title">Picture size</string>
    <string name="amsc_pref_camera_picturesize_entry_3264x2448">8M pixels</string>
    <string name="amsc_pref_camera_picturesize_entry_2592x1936">5M pixels</string>
    <string name="amsc_pref_camera_picturesize_entry_2048x1536">3M pixels</string>
    <string name="amsc_pref_camera_picturesize_entry_1600x1200">2M pixels</string>
    <string name="amsc_pref_camera_picturesize_entry_1280x960">1.3M pixels</string>
    <string name="amsc_pref_camera_picturesize_entry_1024x768">1M pixels</string>
    <string name="amsc_pref_camera_picturesize_entry_640x480">VGA</string>
    <string name="amsc_pref_camera_picturesize_entry_320x240">QVGA</string>
    <string name="amsc_pref_camera_flashmode_title">Flash mode</string>
    <string name="amsc_pref_camera_flashmode_entry_auto">Auto</string>
    <string name="amsc_pref_camera_flashmode_entry_on">On</string>
    <string name="amsc_pref_camera_flashmode_entry_off">Off</string>
    <string name="amsc_pref_camera_scenemode_title">Scene mode</string>
    <string name="amsc_pref_camera_scenemode_entry_auto">Auto</string>
    <string name="amsc_pref_camera_scenemode_entry_action">Action</string>
    <string name="amsc_pref_camera_scenemode_entry_night">Night</string>
    <string name="amsc_pref_camera_scenemode_entry_sunset">Sunset</string>
    <string name="amsc_pref_camera_scenemode_entry_party">Party</string>
    <string name="amsc_not_selectable_in_scene_mode">Not selectable in scene mode.</string>
    <string name="amsc_rotation_correction_title">Correct Orientation</string>
    <string name="amsc_rotate_directions">Tap arrows until set of images look correct.</string>
    <string name="amsc_error_camera">"Couldn't open the camera. Many times the only way to fix this is to reset your device."</string>
    <string name="amsc_error_image_failed">Failed to save image.</string>
    <string name="amsc_error_could_not_start_preview">"Couldn't start camera."</string>
    <string name="amsc_error_button_text">Exit</string>
    <string name="hello">Hello World, MealActivity!</string>
    <string name="evernote_food">Evernote Food</string>
    <string name="title">Meal Title</string>
    <string name="place">Place</string>
    <string name="cuisine">Cuisine</string>
    <string name="tags">Tags</string>
    <string name="meal_notes">Meal Notes</string>
    <string name="photos">Photos</string>
    <string name="tap_for_caption">Tap to add a caption</string>
    <string name="add_caption">Add caption</string>
    <string name="caption">Caption</string>
    <string name="select_picture">Select Picture</string>
    <string name="meal_hint">"Snap photos of dishes, people, ambiance and more

Save details about your meal"</string>
    <string name="no_meals_title">Evernote Food helps you remember the food and meals you love.</string>
    <string name="nomeals_message">"Create a meal by tapping on the \"+\" above. We'll preserve your food memories here, and also make them available everywhere you have Evernote installed."</string>
    <string name="no_search_results_title">No Meals Found</string>
    <string name="attach_image">Attach Image(s)</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="send_to_glass">Send to Glass</string>
    <string name="finding_ingredients">Finding Ingredients...</string>
    <string name="failed_to_find_ingredients">Failed to Find Ingredients.</string>
    <string name="sending_ingredients_to_glass">Sending Ingredients to Glass...</string>
    <string name="sending_to_glass_success">Successfully sent to Glass.</string>
    <string name="sending_to_glass_failure">Failed to send to Glass.</string>
    <string name="recipe_ingredients">Recipe Ingred</string>
    <string name="ingred">Ingred</string>
    <string name="ingredients">"Ingredients:
"</string>
    <string name="ok">OK</string>
    <string name="untitled_meal">Untitled Meal</string>
    <string name="hint_arrow">Hint arrow</string>
    <string name="meal_image">Meal image</string>
    <string name="photo">photo</string>
    <string name="count_selected">%s selected</string>
    <string name="attach">attach</string>
    <string name="address">Address</string>
    <string name="cancel">Cancel</string>
    <string name="location">Location</string>
    <string name="xyzzy">xyzzy</string>
    <string name="select_photos">Select Photos</string>
    <string name="password">Password</string>
    <string name="refresh">Refresh</string>
    <string name="sign_in">Sign In</string>
    <string name="discard">Discard</string>
    <string name="sign_out">Sign out</string>
    <string name="legal">Legal</string>
    <string name="legal_summary">terms of service, privacy policy, attributions</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="category_location">Location for new meals</string>
    <string name="support">Support</string>
    <string name="support_summary">technical support, send log, version</string>
    <string name="customer_support_title">Technical Support</string>
    <string name="customer_support_summary">Submit a support ticket</string>
    <string name="category_account_info">Account Info</string>
    <string name="category_account_info_summary">status, email, usage, cycle</string>
    <string name="pref_account_title">Account</string>
    <string name="pref_status_title">Account Status</string>
    <string name="pref_usage_title">Current Monthly Usage</string>
    <string name="pref_days_left_title">Days Left In Cycle</string>
    <string name="category_other">Other</string>
    <string name="disable_splash_screen">Disable Splash Screen</string>
    <string name="send_log_title">Send log</string>
    <string name="send_log_summary">Send error log to Evernote</string>
    <string name="use_gps_title">Use GPS Satellites</string>
    <string name="use_gps_summary">Requires more battery plus view of sky</string>
    <string name="use_network_title">Use Wireless Networks</string>
    <string name="version">Current Food version</string>
    <string name="update_check">Check for updates</string>
    <string name="category_sync">Sync</string>
    <string name="category_sync_summary">Find Evernote recipes, meal notebook, wifi sync</string>
    <string name="category_recipe_sync">Find Evernote Recipes</string>
    <string name="category_recipe_sync_summary">Include recipes from Evernote by notebooks or tags</string>
    <string name="wifi_sync_title">Wi-Fi sync only</string>
    <string name="wifi_sync_summary">Automatically sync data only when connected to Wi-Fi.</string>
    <string name="notice">Attributions</string>
    <string name="other_options">Other Options</string>
    <string name="other_options_summary">location, language, other</string>
    <string name="image_options_category">Image Options</string>
    <string name="image_options_summary">add to gallery, size, attach from, camera</string>
    <string name="add_images_to_gallery">Add Photos to Gallery</string>
    <string name="image_size">Image Size</string>
    <string name="choose_image_size">Choose Image Size</string>
    <string name="attach_image_using">Attach image using</string>
    <string name="use_device_camera_app">Use camera app</string>
    <string name="food_notebook">Meal Notebook</string>
    <string name="choose_notebook">Choose Notebook</string>
    <string name="recipe_notebooks">Include notebooks</string>
    <string name="recipe_notebooks_summary">Choose notebooks to include in My Recipes section</string>
    <string name="choose_notebooks">Choose Notebook(s)</string>
    <string name="recipe_tags">Include tags</string>
    <string name="recipe_tags_summary">Choose tags to include in My Recipes section</string>
    <string name="choose_tags">Choose Tag(s)</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="send">Send</string>
    <string name="reauth_title">Provide the password for %s:</string>
    <string name="clip">Clip</string>
    <string name="clip_title">Title</string>
    <string name="clip_note_tags">Tags (optional)</string>
    <string name="clip_note_comment">Note (optional)</string>
    <string name="not_a_recipe">Not a recipe?</string>
    <string name="hide">Hide</string>
    <string name="notebook">Notebook</string>
    <string name="search_web_recipe">Search the Web</string>
    <string name="search_web_back">Back</string>
    <string name="search_web_forward">Forward</string>
    <string name="optional_message">Optional Message</string>
    <string name="language">LANGUAGE</string>
    <string name="missing_recipes_title">Missing any recipes?</string>
    <string name="missing_recipes_message">Now you can add recipes from your Evernote account into My Cookbook by selecting notebooks or tags. Tap \"Add My Recipes\" to do this now, or find the option in Settings anytime.</string>
    <string name="missing_recipes_yes">Add My Recipes</string>
    <string name="missing_recipes_no">Not Now</string>
    <string name="desktop_view">Desktop View</string>
    <string name="pref_choose_recipe_language">Choose recipe language</string>
    <string name="recipe_language">Recipe language</string>
</resources>