<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/icon_clip" android:id="@id/clip" android:title="@string/clip" android:showAsAction="always" />
    <item android:id="@id/glass" android:visible="false" android:title="@string/send_to_glass" android:showAsAction="never" />
    <group android:id="@id/group_navigation" android:visible="false">
        <item android:id="@id/web_back" android:title="@string/search_web_back" android:showAsAction="never" />
        <item android:id="@id/web_forward" android:title="@string/search_web_forward" android:showAsAction="never" />
        <item android:id="@id/web_refresh" android:title="@string/refresh" android:showAsAction="never" />
        <item android:id="@id/web_search" android:title="@string/search_web_recipe" android:showAsAction="never" />
    </group>
</menu>