<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/bg_paper" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/btn_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" style="@android:style/ButtonBar">
        <Button android:id="@id/btn_send" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/send" android:layout_weight="1.0" />
        <Button android:id="@id/btn_discard" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/discard" android:layout_weight="1.0" />
    </LinearLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="false" android:layout_above="@id/btn_layout">
        <RelativeLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <AutoCompleteTextView android:gravity="center_vertical" android:id="@id/ac_to" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/to" android:completionThreshold="1" android:layout_alignParentTop="true" android:inputType="textMultiLine|textEmailAddress" style="@style/foodEditText" />
            <EditText android:ellipsize="end" android:id="@id/subject" android:hint="@string/subject" android:layout_below="@id/ac_to" android:inputType="textCapSentences|textAutoCorrect" style="@style/foodEditText" />
            <EditText android:gravity="top|left|center" android:id="@id/mesg" android:hint="@string/optional_message" android:minLines="5" android:layout_below="@id/subject" android:inputType="textCapSentences|textAutoCorrect|textMultiLine" android:imeOptions="actionDone" style="@style/foodEditText.Multi" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>