<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup xmlns:camera="http://schemas.android.com/apk/res-auto">
    <IconListPreference camera:amsc_title="@string/amsc_pref_camera_flashmode_title" camera:amsc_key="pref_camera_flashmode_key" camera:amsc_defaultValue="auto" camera:amsc_entryValues="@array/amsc_pref_camera_flashmode_entryvalues" camera:amsc_entries="@array/amsc_pref_camera_flashmode_entries" camera:amsc_icons="@array/amsc_camera_flashmode_icons" camera:amsc_largeIcons="@array/amsc_camera_flashmode_largeicons" />
    <IconListPreference camera:amsc_title="@string/amsc_pref_camera_scenemode_title" camera:amsc_key="pref_camera_scenemode_key" camera:amsc_defaultValue="auto" camera:amsc_entryValues="@array/amsc_pref_camera_scenemode_entryvalues" camera:amsc_entries="@array/amsc_pref_camera_scenemode_entries" camera:amsc_singleIcon="@drawable/amsc_ic_scn_holo_light" />
    <RecordLocationPreference camera:amsc_title="@string/amsc_pref_camera_recordlocation_title" camera:amsc_key="pref_camera_recordlocation_key" camera:amsc_defaultValue="false" camera:amsc_entryValues="@array/amsc_pref_camera_recordlocation_entryvalues" camera:amsc_entries="@array/amsc_pref_camera_recordlocation_entries" camera:amsc_icons="@array/amsc_camera_recordlocation_icons" camera:amsc_largeIcons="@array/amsc_camera_recordlocation_largeicons" />
    <IconListPreference camera:amsc_title="@string/amsc_pref_camera_picturesize_title" camera:amsc_key="pref_camera_picturesize_key" camera:amsc_entryValues="@array/amsc_pref_camera_picturesize_entryvalues" camera:amsc_entries="@array/amsc_pref_camera_picturesize_entries" camera:amsc_singleIcon="@drawable/amsc_cam_image_size" />
</PreferenceGroup>