<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:id="@id/elephant_line" android:background="@drawable/elephat_line" android:layout_width="fill_parent" android:layout_height="28.0dip" android:layout_marginTop="30.0dip" android:layout_marginBottom="26.0dip" />
        <TextView android:textAppearance="@style/login_fields" android:textSize="14.0dip" android:textColor="@color/food_grey" android:id="@id/instructions" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/meal_margin" android:layout_marginRight="@dimen/meal_margin" android:text="@string/reauth_title" />
        <EditText android:textSize="14.0sp" android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:hint="@string/password" android:maxLines="1" android:password="true" android:inputType="textPassword" android:imeOptions="actionDone" style="@style/foodEditTextBox" />
        <Button android:id="@id/btn_sign_in" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/sign_in" style="@style/foodButtonLinear" />
        <Button android:id="@id/btn_sign_out" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/sign_out" style="@style/foodButtonLinear" />
    </LinearLayout>
</ScrollView>