<?xml version="1.0" encoding="utf-8"?>
<com.evernote.ui.widget.MaxWidthLinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/special_popup_1" android:paddingLeft="18.0dip" android:paddingTop="24.0dip" android:paddingRight="18.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" app:maxLinearLayoutWidth="400.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.evernote.food">
    <com.evernote.ui.widget.EvernoteTextView android:textSize="20.0dip" android:textColor="#ff6b95a0" android:gravity="center_horizontal" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/missing_recipes_title" android:shadowColor="#ffffffff" android:shadowDy="1.0" android:shadowRadius="1.0" app:fontType="caecilia" />
    <TextView android:textSize="14.0dip" android:textColor="@color/food_black" android:gravity="center_horizontal" android:id="@id/message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="24.0dip" android:layout_marginRight="4.0dip" android:text="@string/missing_recipes_message" />
    <Button android:textSize="16.0dip" android:textColor="#ffffffff" android:id="@id/yes" android:background="@drawable/blue_button_bg" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/missing_recipes_yes" android:shadowColor="#66000000" android:shadowDy="-1.0" android:shadowRadius="1.0" />
    <Button android:textSize="16.0dip" android:textColor="@color/food_light_grey" android:id="@id/no" android:background="@drawable/hide_button_bg" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/missing_recipes_no" android:shadowColor="#ffffffff" android:shadowDy="1.0" android:shadowRadius="1.0" />
</com.evernote.ui.widget.MaxWidthLinearLayout>