<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/clip_details_scrollview" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:orientation="vertical" android:padding="14.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:id="@id/focus_stealer" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0px" android:layout_height="0.0px">
                <requestFocus />
            </LinearLayout>
            <EditText android:textColor="@color/food_black" android:id="@id/clip_note_title" android:padding="6.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="50.0dip" android:hint="@string/clip_title" android:layout_alignParentTop="true" />
            <LinearLayout android:orientation="vertical" android:id="@id/notebook_layout" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/clip_note_title">
                <TextView android:textSize="16.0dip" android:textColor="@color/food_black" android:textColorHint="@color/food_light_grey" android:gravity="center_vertical" android:id="@id/clip_note_notebook" android:background="@drawable/selector_bg" android:paddingLeft="10.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="50.0dip" android:hint="@string/notebook" />
                <View style="@style/grey_horizontal_line" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/tags_layout" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/notebook_layout">
                <TextView android:textSize="16.0dip" android:textColor="@color/food_black" android:textColorHint="@color/food_light_grey" android:gravity="center_vertical" android:id="@id/clip_note_tags" android:background="@drawable/selector_bg" android:paddingLeft="10.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="50.0dip" android:hint="@string/clip_note_tags" />
                <View style="@style/grey_horizontal_line" />
            </LinearLayout>
            <EditText android:textSize="14.0dip" android:textColor="@color/food_black" android:gravity="bottom" android:id="@id/clip_note_comment" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="100.0dip" android:hint="@string/clip_note_comment" android:layout_below="@id/tags_layout" />
            <LinearLayout android:orientation="vertical" android:id="@id/edit_note_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_below="@id/tags_layout">
                <Button android:textSize="16.0dip" android:textColor="#ffffffff" android:id="@id/delete_button" android:background="@drawable/blue_button_bg" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/delete" />
                <TextView android:textSize="14.0dip" android:textColor="#ff9fb2ba" android:gravity="center" android:id="@id/not_a_recipe_button" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/not_a_recipe" />
                <Button android:textSize="16.0dip" android:textColor="@color/food_black" android:id="@id/hide_button" android:background="@drawable/hide_button_bg" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/hide" />
            </LinearLayout>
            <TextView android:textSize="14.0dip" android:textColor="#ffffffff" android:id="@id/title_error_popup" android:background="@drawable/register_error_bg" android:paddingLeft="14.0dip" android:paddingTop="14.0dip" android:paddingRight="14.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginTop="-6.0dip" android:lines="1" android:layout_below="@id/clip_note_title" android:layout_alignLeft="@id/clip_note_title" android:layout_alignRight="@id/clip_note_title" />
        </RelativeLayout>
    </ScrollView>
    <FrameLayout android:id="@id/fragment_container" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</FrameLayout>